syntax = "proto3";

option csharp_namespace = "grpcFileTransportServer";

package file;

import "google/protobuf/empty.proto";

service FileService{
    
    rpc FileDowload(FileInfo) returns (stream BytesContent);
    rpc FileUpload(stream BytesContent) returns (google.protobuf.Empty);
}

message FileInfo{
    string fileName = 1;
    string fileExtension = 2;
}

message BytesContent{
    int64 fileSize = 1;
    bytes buffer = 2;
    int32 readedByte = 3;
    FileInfo info = 4;
}